# python-project-52

./: .gitignore  Makefile  Procfile  README.md  db.sqlite3  hexlet.py  pyproject.toml  requierements.txt
.github/workflows/: django.yml
labels/: forms.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py
labels/templates/: label_create.html  label_delete.html
statuses/: forms.py  models.py  tests.py  urls.py  views.py
statuses/fixtures/: fixture_data.json
statuses/migrations/: 0001_initial.py  0002_alter_status_name.py  0003_alter_status_name.py
task_manager/: admin.py  settings.py  urls.py  views.py
task_manager/task_manager/: settings.py
task_manager/templates/: index.html  index_a.html  main.html  main_auth.html
tasks/: forms.py  models.py  tests.py  urls.py  views.py
tasks/fixtures/: new_fixture.json
tasks/migrations/: 0001_initial.py  0002_alter_task_author_alter_task_description_and_more.py  0003_alter_task_author.py  0004_alter_task_author.py  0005_task_labels.py  0006_alter_task_labels.py  0007_alter_task_labels.py
tasks/templates/: main_auth.html  task.html  task_create.html  tasks.html
templates/: delete.html  label_edit.html  labels.html  login.html  login_a.html  statuse_create.html  statuse_delete.html  statuse_edit.html  statuses.html  task.html  task_delete.html  task_edit.html  tasks.html  users.html  users_a.html
users/: forms.py  models.py  tests.py  urls.py  views.py
users/fixtures/: users.json
users/migrations/: 0001_initial.py  0002_alter_user_username.py  0003_rename_user_users.py  (+1 more)
(+18 files in other folders)
