[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["SevaErsh <erschidvs@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.20.0"
heroku = "^0.1.4"
pip = "^22.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
